# Jarvis

./: README.md
ASR/: __init__.py  audio_input.py  config.py  logger_config.py  main.py  requirements.txt  sense_voice_service.py  tts_client.py  voice_input.py  wake_word.py  wake_word_detector.py
ASR/tools/: model_downloader.py
Agents/: agent_lifecycle_hooks.py  browser_agent.py  chat_session.py  dispatcher_agent.py  excel_agent.py  filesystem_agent.py  fileviewer_agent.py  http_server.py  local_search_agent.py  main.py  mcp_server_config.yaml  mcp_server_manager.py  model_provider.py  mongodb_agent.py  requirements.txt  test_http_client.py  tts_client.py
MCP/excel/: main.py  pyproject.toml
MCP/filesystem/: main.py  pyproject.toml
MCP/fileviewer/: main.py  pyproject.toml
MCP/localSearch/: main.py
MCP/mongodb/: main.py  pyproject.toml
STT/: agent_client.py  audio_broadcaster.py  audio_input.py  config.py  logger_config.py  main.py  model_config.json  model_downloader.py  requirements.txt  sense_voice_service.py  speech_recognition.py  tts_client.py  wake_word.py
Service/face_recognition/: README.md  main.py  requirements.txt
TTS/: audio_output.py  edge_tts_api.py  logger_config.py  main.py  requirements.txt  test_edge_tts.py  test_tts.py
