[project]
name = "excel-mcp"
version = "0.1.0"
description = "Excel MCP for Win32 COM automation"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.7.1",
    "pathlib>=1.0.1",
    "pywin32>=305",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
